--- a/index.html
+++ b/index.html
@@ -65,18 +65,9 @@
                                 <a class="nav-link" href="./pages/informacion.html">Información</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link disabled" aria-disabled="true">Clima <i
-                                        class="fa-solid fa-cloud-showers-heavy"></i></a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
-                                    Idioma
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li class="desplegable"><a class="dropdown-item" href="#">Español</a></li>
-                                    <li class="desplegable"><a class="dropdown-item" href="#">Inglés</a></li>
-                                </ul>
+                                <a class="nav-link"
+                                    href="https://www.meteored.com.ar/tiempo-en_Rio+Negro-America+Sur-Chile-Los+Lagos--1-17788.html">Clima
+                                    <i class="fa-solid fa-cloud-showers-heavy"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -87,11 +78,16 @@
             <div>
                 <img src="./recursos/imagen principal-inicio.jpg" alt="Paisaje Río Negro">
             </div>
-            <ul class="animate__animated animate__fadeInDown">
-                <li><a href="./pages/informacion.html">Centro de Información Turística</a>
+            <ul class="barra" class="animate__animated animate__fadeInDown">
+                <i class="fa-solid fa-circle-info"></i>
+                <li><a href="./pages/informacion.html">
+                        Centro de Información Turística</a>
+                    <p>Lunes a Sábados 7:30 a 20:00hs |
+                        Domingos y feriados 8:00 a 20:00hs
+                    </p>
                 </li>
-                <li><a href="./pages/informacion.html">¿Dónde estamos?</a></li>
-                <li><a href="https://web.whatsapp.com/">WhatsApp <i class="fa-brands fa-whatsapp"></i></a></li>
+                <li><a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i>
+                        WhatsApp</i></a></li>
             </ul>
             <!-- regiones y calendario -->
             <section>
@@ -115,20 +111,99 @@
                         <H2>Costa</H2>
                     </a>
                 </article>
-                <article> <img src="./recursos/calendario 1-01.jpg" alt="Calendario Fechas Festivas del mes">
+                <article class="calendario"> <img src="./recursos/calendario-01.jpg" alt="Días Festivos Río Negro">
                     <a class="nav-link disabled" aria-disabled="true">
                         <h2>Días Festivos</h2>
                     </a>
                 </article>
             </section>
         </main>
-        <footer>
-            <div>
-                <ul class="footer">
-                    <li><a href="#">Twitter <i class="fa-brands fa-twitter"></i></a></li>
-                    <li><a href="#">Facebook <i class="fa-brands fa-facebook"></i></a></li>
-                    <li><a href="#">Instagram <i class="fa-brands fa-instagram"></i></a></li>
-                </ul>
+        <footer class="footer">
+            <div class="grupo">
+                <div class="box-1">
+                    <figure>
+                        <a href="#">
+                            <img src="./recursos/Logo.png" alt="Logo de Río Negro">
+                        </a>
+                    </figure>
+                </div>
+                <div class="box-2">
+                    <h2>Localidades</h2>
+                    <a href="#">Allen</a>
+                    <a href="#">Bahía Creek</a>
+                    <a href="#">Campo Grande</a>
+                    <a href="#">Catriel</a>
+                    <a href="#">Cervantes</a>
+                    <a href="#">Chichinales</a>
+                    <a href="#">Chimpay</a>
+                    <a href="#">Choele Choel</a>
+                    <a href="#">Cinco Saltos</a>
+                    <a href="#">Cipolletti</a>
+                </div>
+                <div class="box-3">
+                    <br>
+                    <a href="#">Comallo</a>
+                    <a href="#">Contralmirante Cordero</a>
+                    <a href="#">Coronel Belisle</a>
+                    <a href="#">Darwin</a>
+                    <a href="#">Dina Huapi</a>
+                    <a href="#">El Bolsón</a>
+                    <a href="#">El Cóndor</a>
+                    <a href="#">El Manso</a>
+                    <a href="#">General Conesa</a>
+                    <a href="#">General Fernández Oro</a>
+                </div>
+                <div class="box-4">
+                    <br>
+                    <a href="#">General Godoy</a>
+                    <a href="#">General Roca</a>
+                    <a href="#">Guardia Mitre</a>
+                    <a href="#">Ingeniero Huergo</a>
+                    <a href="#">Ingeniero Jacobacci</a>
+                    <a href="#">La Lobería</a>
+                    <a href="#">Lamarque</a>
+                    <a href="#">Las Grutas</a>
+                    <a href="#">Los Menucos</a>
+                    <a href="#">Luis Beltrán</a>
+                </div>
+                <div class="box-5">
+                    <br>
+                    <a href="#">Mainqué</a>
+                    <a href="#">Maquinchao</a>
+                    <a href="#">Ministro Ramos Mexía</a>
+                    <a href="#">Ñorquincó</a>
+                    <a href="#">Pilcaniyeu</a>
+                    <a href="#">Playas Doradas</a>
+                    <a href="#">Pomona</a>
+                    <a href="#">Río Colorado</a>
+                    <a href="#">San Antonio Este</a>
+                    <a href="#">San Antonio Oeste</a>
+                </div>
+                <div class="box-6">
+                    <br>
+                    <a href="#">San Carlos de Bariloche</a>
+                    <a href="#">Sierra Colorada</a>
+                    <a href="#">Sierra Grande</a>
+                    <a href="#">Valcheta</a>
+                    <a href="#">Viedma</a>
+                    <a href="#">Villa Regina</a>
+                </div>
+                <div class="box-7">
+                    <h3>Ministerio de turismo Río Negro</h3>
+                    <p> Teléfono: 02920-424615/422150
+                        <br>
+                        Whatsapp: 02920 15248697
+                        <br>
+                        A. Zatti 287 1° Piso - CP (8500) Viedma, Río Negro
+                    </p>
+                </div>
+                <div class="box-8">
+                    <div class="red-social">
+                        <a href="https://twitter.com/?lang=es"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="https://www.facebook.com/?locale=es_LA"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+                    </div>
+                </div>
             </div>
         </footer>
     </div>
