--- a/pages/conoce.html
+++ b/pages/conoce.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Río Negro fue parte de la gobernación de la Patagonia hasta el 16 octubre de 1884, fecha en que se creó el territorio nacional de Río Negro, con capital en Viedma. El 10 de diciembre de 1957 el …">
+    <meta name="description"
+        content="Río Negro fue parte de la gobernación de la Patagonia hasta el 16 octubre de 1884, fecha en que se creó el territorio nacional de Río Negro, con capital en Viedma. El 10 de diciembre de 1957 el …">
     <meta name="keywords" content="RIO NEGRO, PATAGONIA, HISTORIA, VIEDMA, Edgardo Castello, Juntos Somos Río Negro ">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -64,17 +65,10 @@
                                 <a class="nav-link" href="../pages/informacion.html">Información</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link disabled" aria-disabled="true">Clima <i class="fa-solid fa-cloud-showers-heavy"></i></a>
+                                <a class="nav-link"
+                                    href="https://www.meteored.com.ar/tiempo-en_Rio+Negro-America+Sur-Chile-Los+Lagos--1-17788.html">Clima
+                                    <i class="fa-solid fa-cloud-showers-heavy"></i></a>
                             </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
-                                    Idioma
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Español</a></li>
-                                    <li><a class="dropdown-item" href="#">Inglés</a></li>
-                                </ul>
                         </ul>
                     </div>
                 </div>
@@ -90,18 +84,21 @@
             <section>
                 <h2>El 11 de octubre de 1878</h2>
                 <p>El Gobierno Nacional dicta la Ley 954, que crea la Gobernación de la Patagonia. El coronel Álvaro
-                    Barros fue el primer gobernador del territorio. La capital se ubicó en la margen sur del río Negro, frente a la
+                    Barros fue el primer gobernador del territorio. La capital se ubicó en la margen sur del río Negro,
+                    frente a la
                     ciudad bonaerense de Carmen de Patagones.</p>
                 <h2>4 de julio de 1879</h2>
                 <p>El presidente Nicolás Avellaneda decretó que la capital del Gobernación de la Patagonia, pase a
                     llamarse Viedma.</p>
                 <h2>16 de octubre de 1884</h2>
                 <p>Se promulga la Ley de Organización de los Territorios Nacionales, que incluyó el Territorio Nacional
-                    de Río Negro. Los gobernadores eran designados por la Nación (no había elecciones) y Viedma siguió siendo
+                    de Río Negro. Los gobernadores eran designados por la Nación (no había elecciones) y Viedma siguió
+                    siendo
                     la capital.</p>
                 <h2>15 de junio de 1955</h2>
                 <p>Se sanciona la Ley 14.408, de creación de la provincia de Río Negro. El Congreso Nacional responde al
-                    reclamo de miles de vecinos y vecinas, que a partir de ese momento podrían elegir mediante el voto a sus
+                    reclamo de miles de vecinos y vecinas, que a partir de ese momento podrían elegir mediante el voto a
+                    sus
                     propios gobernantes. La Ley sería luego promulgada por el presidente Juan Domingo Perón.</p>
                 <h2>28 de junio de 1955</h2>
                 <p>Cambian las funciones de Emilio Berenguer, quien hasta ese momento ocupaba el cargo de gobernador del
@@ -109,7 +106,8 @@
                     comenzó con la tarea de organización del Estado Provincial.</p>
                 <h2>3 de septiembre de 1955</h2>
                 <p>Berenguer pone en funciones a su gabinete, pero el golpe militar interrumpió la vigencia de las
-                    instituciones  y derrocó al presidente Perón. El proceso quedó paralizado, y asumió como interventor nacional el
+                    instituciones y derrocó al presidente Perón. El proceso quedó paralizado, y asumió como interventor
+                    nacional el
                     coronel Gualberto Wheeler.</p>
                 <h2>26 de abril de 1957</h2>
                 <p>El presidente de facto general Pedro Aramburu designó a Carlos Santiago Ramos Mejía como interventor
@@ -128,7 +126,8 @@
                 </p>
                 <h2>18 de marzo de 1962</h2>
                 <p>El Partido Blanco gana las elecciones (conformado por el peronismo que seguía proscrito) con Arturo
-                    Llanos como candidato, pero nuevamente el proceso queda trunco por el golpe de Estado que derroca a Arturo
+                    Llanos como candidato, pero nuevamente el proceso queda trunco por el golpe de Estado que derroca a
+                    Arturo
                     Frondizi.</p>
                 <h2> 7 de julio de 1963</h2>
                 <p>En nuevas elecciones, se impone Carlos Nielsen, por la Unión Cívica Radical del Pueblo. Asumió el 12
@@ -162,20 +161,104 @@
                 <h2> 14 de junio de 2015</h2>
                 <p>Con el sello de Juntos Somos Río Negro, el gobernador Alberto Weretilneck es reelegido en ese cargo,
                     acompañado por Pedro Pesatti como vicegobernador. Se convierte en el gobernador más votado de la
-                    historia  provincial con el 52,8% de los sufragios.</p>
+                    historia provincial con el 52,8% de los sufragios.</p>
                 <h2> 7 de abril de 2019</h2>
                 <p>Se elige la primera gobernadora mujer de la historia de la provincia. Con el 52,6% de los votos,
-                    Arabela Carreras gana las elecciones provinciales, junto a Alejandro Palmieri. Continúa los lineamientos de
+                    Arabela Carreras gana las elecciones provinciales, junto a Alejandro Palmieri. Continúa los
+                    lineamientos de
                     la gestión de Juntos Somos Río Negro.</p>
             </section>
         </main>
-        <footer>
-            <div>
-                <ul class="footer">
-                    <li><a href="#">Twitter <i class="fa-brands fa-twitter"></i></a></li>
-                    <li><a href="#">Facebook <i class="fa-brands fa-facebook"></i></a></li>
-                    <li><a href="#">Instagram <i class="fa-brands fa-instagram"></i></a></li>
-                </ul>
+        <footer class="footer">
+            <div class="grupo">
+                <div class="box-1">
+                    <figure>
+                        <a href="#">
+                            <img src="../recursos/Logo.png" alt="Logo de Río Negro">
+                        </a>
+                    </figure>
+                </div>
+                <div class="box-2">
+                    <h2>Localidades</h2>
+                    <a href="#">Allen</a>
+                    <a href="#">Bahía Creek</a>
+                    <a href="#">Campo Grande</a>
+                    <a href="#">Catriel</a>
+                    <a href="#">Cervantes</a>
+                    <a href="#">Chichinales</a>
+                    <a href="#">Chimpay</a>
+                    <a href="#">Choele Choel</a>
+                    <a href="#">Cinco Saltos</a>
+                    <a href="#">Cipolletti</a>
+                </div>
+                <div class="box-3">
+                    <br>
+                    <a href="#">Comallo</a>
+                    <a href="#">Bahía Creek</a>
+                    <a href="#">Campo Grande</a>
+                    <a href="#">Catriel</a>
+                    <a href="#">Cervantes</a>
+                    <a href="#">Chichinales</a>
+                    <a href="#">Chimpay</a>
+                    <a href="#">Choele Choel</a>
+                    <a href="#">Cinco Saltos</a>
+                    <a href="#">Comallo</a>
+                </div>
+                <div class="box-4">
+                    <br>
+                    <a href="#">Allen</a>
+                    <a href="#">Bahía Creek</a>
+                    <a href="#">Campo Grande</a>
+                    <a href="#">Catriel</a>
+                    <a href="#">Cervantes</a>
+                    <a href="#">Chichinales</a>
+                    <a href="#">Chimpay</a>
+                    <a href="#">Choele Choel</a>
+                    <a href="#">Cinco Saltos</a>
+                    <a href="#">Comallo</a>
+                </div>
+                <div class="box-5">
+                    <br>
+                    <a href="#">Allen</a>
+                    <a href="#">Bahía Creek</a>
+                    <a href="#">Campo Grande</a>
+                    <a href="#">Catriel</a>
+                    <a href="#">Cervantes</a>
+                    <a href="#">Chichinales</a>
+                    <a href="#">Chimpay</a>
+                    <a href="#">Choele Choel</a>
+                    <a href="#">Cinco Saltos</a>
+                    <a href="#">Comallo</a>
+                </div>
+                <div class="box-6">
+                    <br>
+                    <a href="#">Allen</a>
+                    <a href="#">Bahía Creek</a>
+                    <a href="#">Campo Grande</a>
+                    <a href="#">Catriel</a>
+                    <a href="#">Cervantes</a>
+                    <a href="#">Chichinales</a>
+                    <a href="#">Chimpay</a>
+                    <a href="#">Choele Choel</a>
+                    <a href="#">Cinco Saltos</a>
+                    <a href="#">Comallo</a>
+                </div>
+                <div class="box-7">
+                    <h3>Ministerio de turismo Río Negro</h3>
+                    <p> Teléfono: 02920-424615/422150
+                        <br>
+                        Whatsapp: 02920 15248697
+                        <br>
+                        A. Zatti 287 1° Piso - CP (8500) Viedma, Río Negro
+                    </p>
+                </div>
+                <div class="box-8">
+                    <div class="red-social">
+                        <a href="https://twitter.com/?lang=es"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="https://www.facebook.com/?locale=es_LA"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+                    </div>
+                </div>
             </div>
         </footer>
 
