--- a/pages/que-hacer.html
+++ b/pages/que-hacer.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Conocé lo que ofrece la gastronomía de Río negro en cada región">
-    <meta name="keywords" content="RIO NEGRO, PATAGONIA, TURISMO, GASTRONOMÍA CORDILLERA, CASTRONOMÍA ESTEPA, GASTRONOMÍA VALLE, GASTRONOMÍA COSTA">
+    <meta name="keywords"
+        content="RIO NEGRO, PATAGONIA, TURISMO, GASTRONOMÍA CORDILLERA, CASTRONOMÍA ESTEPA, GASTRONOMÍA VALLE, GASTRONOMÍA COSTA">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -64,17 +65,10 @@
                                 <a class="nav-link" href="../pages/informacion.html">Información</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link disabled" aria-disabled="true">Clima <i class="fa-solid fa-cloud-showers-heavy"></i></a>
+                                <a class="nav-link"
+                                    href="https://www.meteored.com.ar/tiempo-en_Rio+Negro-America+Sur-Chile-Los+Lagos--1-17788.html">Clima
+                                    <i class="fa-solid fa-cloud-showers-heavy"></i></a>
                             </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
-                                    Idioma
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Español</a></li>
-                                    <li><a class="dropdown-item" href="#">Inglés</a></li>
-                                </ul>
                         </ul>
                     </div>
                 </div>
@@ -102,13 +96,96 @@
                 </article>
             </section>
         </main>
-        <footer>
-            <div>
-                <ul class="footer">
-                    <li><a href="#">Twitter <i class="fa-brands fa-twitter"></i></a></li>
-                    <li><a href="#">Facebook <i class="fa-brands fa-facebook"></i></a></li>
-                    <li><a href="#">Instagram <i class="fa-brands fa-instagram"></i></a></li>
-                </ul>
+        <footer class="footer">
+            <div class="grupo">
+                <div class="box-1">
+                    <figure>
+                        <a href="#">
+                            <img src="../recursos/Logo.png" alt="Logo de Río Negro">
+                        </a>
+                    </figure>
+                </div>
+                <div class="box-2">
+                    <h2>Localidades</h2>
+                    <a href="#">Allen</a>
+                    <a href="#">Bahía Creek</a>
+                    <a href="#">Campo Grande</a>
+                    <a href="#">Catriel</a>
+                    <a href="#">Cervantes</a>
+                    <a href="#">Chichinales</a>
+                    <a href="#">Chimpay</a>
+                    <a href="#">Choele Choel</a>
+                    <a href="#">Cinco Saltos</a>
+                    <a href="#">Cipolletti</a>
+                </div>
+                <div class="box-3">
+                    <br>
+                    <a href="#">Comallo</a>
+                    <a href="#">Bahía Creek</a>
+                    <a href="#">Campo Grande</a>
+                    <a href="#">Catriel</a>
+                    <a href="#">Cervantes</a>
+                    <a href="#">Chichinales</a>
+                    <a href="#">Chimpay</a>
+                    <a href="#">Choele Choel</a>
+                    <a href="#">Cinco Saltos</a>
+                    <a href="#">Comallo</a>
+                </div>
+                <div class="box-4">
+                    <br>
+                    <a href="#">Allen</a>
+                    <a href="#">Bahía Creek</a>
+                    <a href="#">Campo Grande</a>
+                    <a href="#">Catriel</a>
+                    <a href="#">Cervantes</a>
+                    <a href="#">Chichinales</a>
+                    <a href="#">Chimpay</a>
+                    <a href="#">Choele Choel</a>
+                    <a href="#">Cinco Saltos</a>
+                    <a href="#">Comallo</a>
+                </div>
+                <div class="box-5">
+                    <br>
+                    <a href="#">Allen</a>
+                    <a href="#">Bahía Creek</a>
+                    <a href="#">Campo Grande</a>
+                    <a href="#">Catriel</a>
+                    <a href="#">Cervantes</a>
+                    <a href="#">Chichinales</a>
+                    <a href="#">Chimpay</a>
+                    <a href="#">Choele Choel</a>
+                    <a href="#">Cinco Saltos</a>
+                    <a href="#">Comallo</a>
+                </div>
+                <div class="box-6">
+                    <br>
+                    <a href="#">Allen</a>
+                    <a href="#">Bahía Creek</a>
+                    <a href="#">Campo Grande</a>
+                    <a href="#">Catriel</a>
+                    <a href="#">Cervantes</a>
+                    <a href="#">Chichinales</a>
+                    <a href="#">Chimpay</a>
+                    <a href="#">Choele Choel</a>
+                    <a href="#">Cinco Saltos</a>
+                    <a href="#">Comallo</a>
+                </div>
+                <div class="box-7">
+                    <h3>Ministerio de turismo Río Negro</h3>
+                    <p> Teléfono: 02920-424615/422150
+                        <br>
+                        Whatsapp: 02920 15248697
+                        <br>
+                        A. Zatti 287 1° Piso - CP (8500) Viedma, Río Negro
+                    </p>
+                </div>
+                <div class="box-8">
+                    <div class="red-social">
+                        <a href="https://twitter.com/?lang=es"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="https://www.facebook.com/?locale=es_LA"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+                    </div>
+                </div>
             </div>
         </footer>
     </div>
